# bact-twin-architecture

./: .gitignore  README.md  pyproject.toml
doc/loco/discussion_round_0/: minutes.md
doc/loco/discussion_round_0/preparation/: loco_workshop_dicussion.md
examples/max_iv/: max_iv_excitation_curves.py
src/: __init__.py
src/bact_twin_architecture/: __init__.py
src/bact_twin_architecture/bl/: bessyii_yellow_pages.py  command_rewriter.py  maxiv_yellow_pages.py  soleil_yellow_pages.py
src/bact_twin_architecture/data_model/: __init__.py  combined_excitation_curves.py  command.py  conversion_info.py  convienience_identifier.py  harmonic_id.py  identifiers.py  location.py  unit_conversion_info.py  unit_conversion_repo.py
src/bact_twin_architecture/interfaces/: __init__.py  command_rewritter.py  command_state_space_transformer.py  family_tree.py  id_property_transformer.py  identifier.py  liaison_manager.py  lookup_element.py  measurement_execution_engine.py  repo_interface_example.py  state_conversion.py  translator_service.py
src/bact_twin_architecture/utils/: __init__.py  liaison_manager_facade.py  liaison_manager_family.py  liaison_manager_lookup_table.py  liaison_manager_pair.py  model.py  state_conversion.py  unit_conversion.py
src/bact_twin_architecture/utils/lm/: liaison_manager_facade.py  liaison_manager_family.py  liaison_manager_lookup_table.py  liaison_manager_pair.py  model.py
src/bact_twin_architecture/utils/ts/: model.py  translation_service_facade.py  translation_service_lookup_table.py  translation_service_sharing_to.py
(+1 files in other folders)
