[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bact-twin-architecture"
version = "0.1.1a1"
description = "BACT twin architecture"
authors = ["Waheedullah Sulaiman Khail", "Pierre Schnizer"]
license = "GPL-3.0"
homepage = "https://github.com/hz-b/bact-twin-architecture"
documentation = "https://github.com/hz-b/bact-twin-architecture"
repository = "https://github.com/hz-b/bact-twin-architecture"
keywords = []

[tool.poetry.dependencies]
python = ">=3.7"
# todo: checki f numpz provides sufficient functionaliz
scipy="*"
numpy="*"